[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "remedi",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "FA",       # Enforce from __future__ import annotations
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "BLE",      # Disallow catch-all exceptions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
explicit_package_bases = true
disable_error_code = ["import-untyped"]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./app/migrations"
src_folder = "./."

[project]
name = "remedi"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "aerich[toml]>=0.8.2",
    "apscheduler[redis]>=3.11.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "pyttings>=2.1.0",
    "tortoise-orm[asyncpg]>=0.24.2",
    "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/ruitcatarino/remedi"
Repository = "https://github.com/ruitcatarino/remedi"
Issues = "https://github.com/ruitcatarino/remedi/issues"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "coverage>=7.7.1",
    "httpx>=0.28.1",
    "debugpy>=1.8.14",
    "coveralls>=4.0.1",
]
